# omeganum

./: .gitignore  Cargo.toml  LICENSE  LICENSE-OMEGANUM  README.md
.github/workflows/: coverage.yml  rust.yml
src/: constants.rs  lib.rs  parsing.rs  shims.rs
tests/: test.rs
