[package]
name = "omeganum"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2"
libm = {version = "0.2", optional = true}
serde = {version = "1", optional = true, features = ["serde_derive"]}

[features]
default = ["std"]
std = []
error_in_core = []
libm = ["dep:libm", "num-traits/libm"]
serde = ["dep:serde", "std"]