[package]
name = "omeganum"
version = "1.0.0"
edition = "2021"
authors = ["Naruyoko", "baltdev"]
description = "Stores numbers up to 10{N}9e15."
keywords = ["math", "bignum", "no-std", "port"]
categories = ["no-std"]
license = "MIT"

[dependencies]
num-traits = "0.2"
libm = {version = "0.2", optional = true}
serde = {version = "1", optional = true, features = ["serde_derive"]}

[features]
default = ["std"]
std = []
error_in_core = []
libm = ["dep:libm", "num-traits/libm"]
serde = ["dep:serde", "std"]
f16 = []